--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "build": "nest build",
     "build-server": "nest build -p tsconfig-server.build.json",
     "format": "prettier --write \"src/**/*.ts\" \"**/*.json\"",
-    "prestart": "yarn",
     "prestart:dev": "yarn",
-    "start": "nest start",
+    "start": "node dist/main.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -32,32 +31,31 @@
     ]
   },
   "dependencies": {
-    "@nestjs/common": "^9.1.5",
-    "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.1.5",
-    "@nestjs/jwt": "^9.0.0",
-    "@nestjs/microservices": "^9.1.5",
-    "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.1.5",
-    "@nestjs/swagger": "^6.1.2",
-    "@tnt-topup/consumer-gateway": "^1.0.2",
-    "@tnt-topup/entities": "^1.0.11",
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.5.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/jwt": "^7.2.0",
+    "@nestjs/microservices": "^7.4.4",
+    "@nestjs/passport": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/typeorm": "^7.1.4",
     "@types/node-fetch": "^2.5.8",
-    "cache-manager": "^3.6.1",
     "express-basic-auth": "^1.2.1",
+    "js-sha256": "^0.9.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "mysql": "^2.18.1",
     "needle": "^2.6.0",
-    "nestjs-i18n": "^8.0.10",
+    "nestjs-request-context": "^1.0.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "querystring": "^0.2.1",
+    "raw-body": "^2.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7",
-    "typeorm": "^0.2.30",
-    "ua-parser-js": "^1.0.2"
+    "typeorm": "^0.2.28"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
