--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 # compiled output
 /dist
+/dist-backup
+/pre-dist
 /node_modules
 
 # Logs
 logs
 *.log
 npm-debug.log*
-pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
@@ -33,3 +34,6 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+.env
+/images
