--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.4",
     "@types/node-fetch": "^2.5.8",
+    "crypto-js": "^4.1.1",
     "express-basic-auth": "^1.2.1",
     "js-sha256": "^0.9.0",
     "lodash": "^4.17.21",
