--- a/package.json
+++ b/package.json
@@ -44,18 +44,15 @@
     "express-basic-auth": "^1.2.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "mysql": "^2.18.1",
     "needle": "^2.6.0",
     "nestjs-request-context": "^1.0.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "querystring": "^0.2.1",
-    "raw-body": "^2.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7",
-    "typeorm": "^0.2.28"
+    "rxjs": "^7"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
